[project]
name = "esphome-wienernetze-im150-smartmeter"
version = "0.1.3-beta.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",   # pydocstyle
    "CPY", # flake8-copyright
    "T20", # flake8-print
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.1",
    "esphome>=2024.12.4",
    "gitpython>=3.1.44",
    "semver>=3.0.0",
]
